test/expect/cmd.castxml-mix1.stderr.txt
^error: '--castxml-gccxml' and '--castxml-output=<v>' may not be not be used together!

Usage: castxml .*$
